tests/gen-test/test_out/long-const-compute.txt
error: scope item not found
  --> long-const-compute/root.ctl:11:11
   |
11 | const C = expensive()
   |           ^^^^^^^^^ this does not exist or is not imported
   |
   = help: expected function or module
   = info: debug: queried 'expensive'

error: scope item not found
  --> long-const-compute/root.ctl:13:11
   |
13 | const D = expensive()
   |           ^^^^^^^^^ this does not exist or is not imported
   |
   = help: expected function or module
   = info: debug: queried 'expensive'

error: expected mutable value
 --> long-const-compute/root.ctl:6:13
  |
6 |             i = i + 1
  |             ^ here
  |

error: scope item not found
  --> long-const-compute/root.ctl:16:22
   |
16 | fn main -> uint => C - D
   |                      ^ this does not exist or is not imported
   |
   = help: expected Func
   = info: debug: queried '() - ()'

